# wagtail-polymath

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  ruff.yml  test.yml
docs/: conf.py  index.rst  installation.rst
src/wagtail_polymath/: blocks.py  config.py  settings.py  widgets.py
src/wagtail_polymath/static/wagtail_polymath/js/: mathjax-textarea-adapter.js  mathjax_init.js  polymath-textarea-adapter.js  polymath-textarea-controller.js  polymath-widget-katex.js  polymath-widget-mathjax.js  wagtail_polymath.js
src/wagtail_polymath/templates/wagtail_polymath/: mathjaxwidget.html  textarea-widget.html
src/wagtail_polymath/templatetags/: wagtail_polymath.py
src/wagtailmath/: apps.py  blocks.py  widgets.py
src/wagtailmath/static/wagtailmath/js/: mathjax-textarea-adapter.js  wagtailmath-mathjax-controller.js  wagtailmath.js
src/wagtailmath/templatetags/: wagtailmath.py
tests/: conftest.py  manage.py  test_placeholder.py  test_settings.py  test_streamfield.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/testapp/: math_page.html
tests/testproject/: __init__.py  settings.py  urls.py
wagtail_polymath/: apps.py  blocks.py  config.py  settings.py  wagtail_hooks.py  widgets.py
wagtail_polymath/static/wagtail_polymath/js/: katex_preview.js  katex_render_body.js  mathjax_config.js  mathjax_preview.js  wagtailmath.js
wagtail_polymath/templates/wagtail_polymath/: streamfield.html
wagtail_polymath/templatetags/: wagtail_polymath.py
wagtail_polymath/test/: __init__.py  apps.py  settings.py
wagtailmath/: apps.py  blocks.py
wagtailmath/static/wagtailmath/js/: wagtailmath.js
wagtailmath/templates/wagtailmath/: mathjaxwidget.html
wagtailmath/templatetags/: wagtailmath.py
