[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtailmath"
authors = [{name = "James Ramm", email = "jamessramm@gmail.com"}]
description = "Wagtail StreamField block for rendering mathematical equations"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "Wagtail>=5.2"
]
[project.optional-dependencies]
linting = ["pre-commit>=3.6.0,<4",]
testing = [
    "dj-database-url==2.1.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-django==4.8.0",
]
ci = [
    "tox>=4.15.1,<5",
    "tox-gh-actions>=3.2,<3.3",
]

[project.urls]
Home = "https://github.com/wagtail-nest/wagtail-polymath"
Changelog = "https://github.com/wagtail-nest/wagtail-polymath/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wagtail-nest/wagtail-polymath/blob/main/docs/"

[tool.flit.module]
name = "wagtailmath"

[tool.flit.sdist]
exclude = [
    "docs",
    "tests",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
    "ruff.toml",
    "Makefile",
]

[tool.pytest.ini_options]
pythonpath = ". tests"
DJANGO_SETTINGS_MODULE = "testproject.settings"
