[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-polymath"
authors = [{name = "James Ramm", email = "jamessramm@gmail.com"}]
maintainers = [{name = "Wagtail Nest team", email = "hello@wagtail.org"}]
description = "Wagtail StreamField block for rendering mathematical equations"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "Wagtail>=7.0"
]
[project.optional-dependencies]
linting = ["pre-commit>=4.6.0,<5",]
testing = [
    "dj-database-url==3.1.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
]
ci = [
    "tox>=4.55.1,<5",
    "tox-gh-actions>=3.5,<4",
]

[project.urls]
Home = "https://github.com/wagtail-nest/wagtail-polymath"
Changelog = "https://github.com/wagtail-nest/wagtail-polymath/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wagtail-nest/wagtail-polymath/blob/main/docs/"

[tool.flit.module]
name = "wagtail_polymath"

[tool.flit.sdist]
exclude = [
    "docs",
    "tests",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
    "ruff.toml",
    "Makefile",
]

[tool.pytest.ini_options]
pythonpath = ". tests"
DJANGO_SETTINGS_MODULE = "testproject.settings"
